Prevents collapsing of screen div

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,7 @@ body {
   border-style: solid;
   text-align: right;
   padding-right: 5px;
+  height: 1.3em;
 }
 
 .numbers {
